fix: updating media query to fix form  spacing on spencers laptop

--- a/frontend/styles/form.css
+++ b/frontend/styles/form.css
@@ -221,7 +221,7 @@
 }
 
 /* Special media query for small laptops */
-@media screen and (max-height: 700px) and (orientation: landscape) {
+@media screen and (max-height: 800px) and (orientation: landscape) {
     .form-container {
         padding: 16px 48px;
         height: auto;
